--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,3 @@
 {
-    "rewrites": [{ "source": "/src/(.*)", "destination": "/src" }]
+    "rewrites": [{ "source": "/src/(app.js)", "destination": "/" }]
 }
